is seen and countdown

--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -26,4 +26,16 @@
         android:padding="8dp"
         android:background="@drawable/receiver_backgroud"/>
 
+    <TextView
+        android:id="@+id/seen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/show_message"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="5dp"
+        android:visibility="gone"
+        android:textSize="10sp"
+        />
+
 </RelativeLayout>
