--- a/app/src/main/res/layout/activity_aktivasi.xml
+++ b/app/src/main/res/layout/activity_aktivasi.xml
@@ -4,29 +4,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/tepi"
-    tools:context=".LoginActivity">
+    tools:context=".AktivasiActivity">
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/action_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/txt_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:textAllCaps="true"
+                android:text="@string/aktivasi"
+                android:textColor="@color/putih"
+                android:textSize="20sp" />
+        </androidx.appcompat.widget.Toolbar>
+    </com.google.android.material.appbar.AppBarLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:layout_centerInParent="true"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/selamat_datang"
-            android:textAlignment="center"
-            android:textColor="@color/colorPrimary"
-            android:textSize="@dimen/h1"
-            android:layout_marginVertical="@dimen/tepi"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/silahkan_login_terlebih_dahulu"
-            android:layout_marginVertical="@dimen/tepi"/>
+        android:padding="16dp"
+        >
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
@@ -37,9 +45,16 @@
                 android:id="@+id/email"
                 android:inputType="textEmailAddress"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"/>
 
         </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="16dp"
+            android:paddingBottom="0dp"
+            android:text="Buat Password untuk kelengkapan aktivasi."/>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
@@ -54,14 +69,27 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/konfirmasi_password">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/con_password"
+                android:inputType="textPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
         <Button
-            android:id="@+id/login"
+            android:id="@+id/aktivasi"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:textSize="@dimen/h3"
-            android:text="@string/masuk"
+            android:text="@string/aktivasi"
             android:textAllCaps="true"
+            android:textSize="@dimen/h3"
             android:textColor="@color/putih"
             android:background="@drawable/all_button"
             />
@@ -76,16 +104,17 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/aktivasikah"/>
+                android:text="@string/sudah_mengaktifkan_akun"/>
 
             <TextView
-                android:id="@+id/aktivasi"
+                android:id="@+id/masuk"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/aktivasi"
+                android:text="@string/masuk"
                 android:textColor="@color/colorAccent"
                 android:layout_marginStart="@dimen/space"/>
         </LinearLayout>
+
     </LinearLayout>
 
 </RelativeLayout>
