--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -158,7 +158,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/consulting"
+                    android:text="Konsultasi 7 Hari Terakhir:"
                     android:textColor="@color/black"
                     android:textSize="@dimen/h3" />
 
