lanjut ke offline

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -38,7 +38,7 @@
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/no_izin_praktek">
+            android:hint="No SRTA">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/izinpraktek"
