--- a/app/src/main/res/layout/activity_consultation.xml
+++ b/app/src/main/res/layout/activity_consultation.xml
@@ -35,43 +35,60 @@
 
             <TextView
                 android:id="@+id/txt_toolbar"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Disini Toolbar"
                 android:textSize="20sp"
                 android:paddingLeft="10dp"
                 android:textColor="@color/putih"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical|right">
+
+                <ImageView
+                    android:id="@+id/teruskan"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:src="@drawable/ic_view_list" />
+
+            </LinearLayout>
+
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/countdown"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="4dp"
-        android:layout_below="@id/action_bar"
-        app:cardCornerRadius="0dp">
+<!--    <androidx.cardview.widget.CardView-->
+<!--        android:id="@+id/countdown"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:elevation="4dp"-->
+<!--        android:layout_below="@id/action_bar"-->
+<!--        app:cardCornerRadius="0dp">-->
 
-        <TextView
-            android:id="@+id/txt_countdown"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:padding="8dp"
-            android:text="00:00"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="12sp" />
+<!--        <TextView-->
+<!--            android:id="@+id/txt_countdown"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:gravity="center"-->
+<!--            android:padding="8dp"-->
+<!--            android:text="00:00"-->
+<!--            android:textAlignment="center"-->
+<!--            android:textColor="@color/black"-->
+<!--            android:textSize="12sp" />-->
 
-    </androidx.cardview.widget.CardView>
+<!--    </androidx.cardview.widget.CardView>-->
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/layout_send"
-        android:layout_below="@+id/countdown"/>
+        android:layout_below="@+id/action_bar"/>
 
     <RelativeLayout
         android:id="@+id/layout_send"
