--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -76,13 +76,21 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/aktivasikah"/>
+                android:text="@string/belum_punya_akun"/>
 
-            <TextView
+            <!--<TextView
                 android:id="@+id/aktivasi"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/aktivasi"
+                android:textColor="@color/colorAccent"
+                android:layout_marginStart="@dimen/space"/>-->
+
+            <TextView
+                android:id="@+id/btn_daftar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/daftar"
                 android:textColor="@color/colorAccent"
                 android:layout_marginStart="@dimen/space"/>
         </LinearLayout>
