--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#D81B60</color>
     <color name="black">#000000</color>
     <color name="putih">#FFFFFF</color>
+    <color name="bg1">#4A759C</color>
+    <color name="red">#F44336</color>
+    <color name="green">#4CAF50</color>
 </resources>
